[bumpversion]
current_version = 0.1.3
commit = True
tag = True
tag_name = "{new_version}"

[bumpversion:file:setup.py]
[bumpversion:file:asana_hub/__init__.py]
[bumpversion:file:README.md]

[metadata]
description-file = README.md

[wheel]
universal = 1

[flake8]
ignore = F403,F401
max-line-length = 80
exclude = tests/*
max-complexity = 10